tests/paczka1/fuzzy1/72507765.err
Error in line 1: y9Quhq7VBcA S76 78,2
Error in line 8: zfPbLtBMMEi S76 7,5
Error in line 12: rwvSNGS A622 25,7
Error in line 13: rwvSNGS S775 96,5
Error in line 3: S471 S471 57,9
Error in line 20: rwvSNGS S775 45,5
Error in line 27: btGHrbky S76 71,0
Error in line 28: btGHrbky A622 74,7
